# ai-toolkit-inference

./: .gitignore  ComfyUI.md  LICENSE  README.md  __init__.py  install.py  pyproject.toml  pytest.ini  requirements-inference.txt  requirements.txt
comfyui_nodes/: __init__.py  rc_common.py  rc_latent_workflow.py  rc_models.py
docs/: CNAME  _config.yml  index.md
example_workflows/: rc_aitk_qwen2512_img2img_upscale.json  rc_aitk_qwen2512_latent_upscale.json  rc_aitk_sdxl_latent_upscale.json  rc_chroma_minimal.json  rc_flex1_minimal.json  rc_flex2_minimal.json  rc_flux2_klein_4b_minimal.json  rc_flux2_klein_9b_minimal.json  rc_flux2_minimal.json  rc_flux_dev_minimal.json  rc_flux_kontext_minimal.json  rc_hidream_e1_minimal.json  rc_hidream_minimal.json  rc_ltx2_minimal.json  rc_lumina2_minimal.json  rc_omnigen2_minimal.json  rc_qwen_image_2512_minimal.json  rc_qwen_image_edit_minimal.json  rc_qwen_image_edit_plus_2511_minimal.json  rc_qwen_image_edit_plus_minimal.json  rc_qwen_image_minimal.json  rc_sd15_minimal.json  rc_sdxl_minimal.json  rc_wan21_14b_minimal.json  rc_wan21_1b_minimal.json  rc_wan21_i2v_14b480p_minimal.json  rc_wan21_i2v_14b_minimal.json  rc_wan22_14b_i2v_minimal.json  rc_wan22_14b_t2v_minimal.json  rc_wan22_5b_minimal.json  rc_zimage_deturbo_minimal.json  rc_zimage_minimal.json  rc_zimage_turbo_minimal.json
src/: __init__.py  config.py  containers.py  exceptions.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_flux2_negative_prompt.py  test_image_utils.py  test_lora_url_normalization.py  test_models.py  test_offload_mode.py  (+5 more)
(+83 files in other folders)
